--- a/index.html
+++ b/index.html
@@ -359,9 +359,8 @@
                     </svg>
                     <!--…y llega hasta acá-->
                     <p class="p-5">
-                        El gráfico muestra los distintos instrumentos que aparecen en distintos tipos de orquestas. Esto se realiza de tal manera que el elemento principal es la categoría de orquestas y el elemento segundario son los
-                        instrumentos. Particularmente, esta relación se muestra con un Sunburst Diagram, lo que permite agrupar de manera simple con el uso de color y pertenencia. Con respecto al color, este permite mostrar de manera más
-                        explicita la relación entre orquesta e instrumento. Mientras que el espacio entre instrumentos permite diferenciar cada elemento.
+                        Según el Dr. Mario García (Two tempos -- rhythms for storytelling in the digital age, 2014), los nuevos medios digitales no cuentan la historia completa, si no que segmentos de ella. Este gráfico es un buen ejemplo de aquello, puesto que no mostramos la base de datos como una tabla y tal, si no que está procesada/curated. Esto no solo permite que la persona pueda crear la propia historia, sino que le es más fácil digerir esta información. Aparte, es importante notar que varias disciplinas se mezlcan en este gráfico. Particularmente, está el diseño, la música y la estadística en la creación del gráfico, lo que es considerado crucial por el Dr. Mario García para el storytelling de los nuevos medios digitales.
+                      
                     </p>
                 </div>
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
